tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__UVPowerPerTurbin-AAAAAAAAAAAAAAAAAAAMXQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3165,
  "prerequisites": [
    3163
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Once you progress enough in ZPM to make ZPM Dynamo Hatches, you can increase each turbine's output to 524,288 EU/t. At this number, you'll be a lot less limited by the turbine material, and it's possible to increase the total power output of one Fusion Reactor considerably. You can cover the total Helium Plasma output from one reactor with 3 Plasma Turbines, if you choose the right materials:\n\nLarge High Durability Compound Steel 235% 473,759 EU/t\nLarge Atomic Separation Catalyst 206% 409,663 EU/t\nLarge Adamantium 206% 413,280 EU/t\nLarge Draconium 175% 220,500 EU/t (durable)\nLarge Neutronium 165% 249,480 EU/t (very durable)\n\nThe power output and final efficiency can vary a lot, based on which turbines you're using. Some of them, like Ichorium and Neutronium, last basically forever, while others will need to be replaced from time to time but offer higher efficiency. If you want to get more power per turbine, to reach closer to the dynamo's limit, you can increase the flow of plasma to the turbine, but be careful! You can't go beyond the dynamo's limit, and you will also lose efficiency as you increase the flow amount. More concrete values for efficiency loss can be found in the Plasma Turbine quest in the LuV page.\n\nMake a normal or buffered ZPM dynamo to complete the quest.\n\n[note]Also, check out the XL Plasma Turbine.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "UV Power Per Turbine",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3163
  ],
  "rewards": [],
  "tasks": []
}
