tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__UVSolar-AAAAAAAAAAAAAAAAAAAKGw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2587,
  "prerequisites": [
    2777,
    2665
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Produces 1A of UV voltage during the day. Useful if you live in a dimension with permanent day (Eg garden).",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "UV Solar",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2777,
    2665
  ],
  "rewards": [],
  "tasks": []
}
