tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__UnfortunatelyThe-AAAAAAAAAAAAAAAAAAAHbA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1900,
  "prerequisites": [
    1899
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After your rods have finished their cycle they turn into depleted rods. You can then thermal centrifuge them to get some materials back. Depending on the rod, you can get different stuff, see NEI or the wiki for details.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lUnfortunately, There's No Depleted Uranium Bullets",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1899
  ],
  "rewards": [],
  "tasks": []
}
