tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__VentingHeat-AAAAAAAAAAAAAAAAAAAAxQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 197,
  "prerequisites": [
    190
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Heat vents are a passive way to remove heat from your reactor. Their performance is measured in heat units per tick (Hu/t), and there are a few different types that all work slightly differently.\n\nThese heat vents simply cool themselves after absorbing heat from adjacent fuel rods and heat exchangers:\n\nHeat Vent: Cools itself by 6 Hu/t\n\nAdvanced Heat Vent: Cools itself by 12 Hu/t\n\nThese heat vents absorb heat and cool themselves much like the ones above, but they also pull heat directly from the reactor core to themselves:\n\nReactor Heat Vent: Cools itself by 5 Hu/t and the reactor by 5 Hu/t\n\nOverclocked Heat Vent: Cools itself by 20 Hu/t and the reactor by 36 Hu/t[note]Since it pulls more heat from the reactor than it dissipates, these are prone to melting if their heat is not balanced by a heat exchanger[/note]\n\nThe Component Heat Vent works differently to the other vents. Rather than absorbing heat and cooling itself or the reactor, it simply cools adjacent components (but not fuel rods) by 4 Hu/t",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lVenting Heat",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    190
  ],
  "rewards": [],
  "tasks": []
}
