tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__Wireless30-AAAAAAAAAAAAAAAAAAAJ7w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2543,
  "prerequisites": [
    2595,
    2542
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This upgrade allows unlimited range. You don't even need a Wireless Access Point!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wireless 3.0",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2595,
    2542
  ],
  "rewards": [],
  "tasks": []
}
